[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyassimp"
version = "5.2.5"
license = "ISC"
authors = [
    { name = "ASSIMP Developers", email = "assimp-discussions@lists.sourceforge.net" },
]
maintainers = [{ name = "Séverin Lemaignan", email = "severin@guakamole.org" }]
description = "Python bindings for the Open Asset Import Library (ASSIMP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]
