[build-system]
requires = [
    "wheel==0.46.3",
    "packaging",
    "pyMSVC@git+https://github.com/kdschlosser/python_msvc ; sys_platform=='win32'",
]
build-backend = "builder._backend"
backend-path = ["."]

[project]
name = "pyassimp"
version = "6.0.2"
license = "ISC"
authors = [
    { name = "ASSIMP Developers", email = "kim.kulling@assimp.org" },
]
maintainers = [{ name = "Séverin Lemaignan", email = "severin@guakamole.org" }]
description = "Python bindings for the Open Asset Import Library (ASSIMP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.urls]
"Homepage" = "https://github.com/assimp/assimp"
"Source" = "https://github.com/assimp/assimp"
